@@ -87,7 +87,6 @@ static void xfsm_client_class_init (XfsmClientClass *klass);
 static void xfsm_client_init (XfsmClient *client);
 static void xfsm_client_finalize (GObject *obj);
 
-static gchar **property_to_strv (const SmProp *prop)  G_GNUC_PURE;
 static void    xfsm_properties_replace_discard_command (XfsmProperties *properties,
                                                         gchar         **new_discard);
 static void    xfsm_client_dbus_class_init (XfsmClientClass *klass);
@@ -163,29 +162,6 @@ xfsm_client_finalize (GObject *obj)
 
 
 
-static gchar **
-property_to_strv (const SmProp *prop)
-{
-  gchar **strv = NULL;
-  gint    strc;
-  guint   n;
-  
-  if (strcmp (prop->type, SmARRAY8) == 0)
-    {
-      if (!g_shell_parse_argv ((const gchar *) prop->vals->value,
-                               &strc, &strv, NULL))
-        return NULL;
-    }
-  else if (strcmp (prop->type, SmLISTofARRAY8) == 0)
-    {
-      strv = g_new (gchar *, prop->num_vals + 1);
-      for (n = 0; n < prop->num_vals; ++n)
-        strv[n] = g_strdup ((const gchar *) prop->vals[n].value);
-      strv[n] = NULL;
-    }
-
-  return strv;
-}
 
 
 static void
@@ -401,6 +377,7 @@ xfsm_client_get_properties (XfsmClient *client)
   return client->properties;
 }
 
+
 XfsmProperties *
 xfsm_client_steal_properties (XfsmClient *client)
 {
@@ -413,6 +390,7 @@ xfsm_client_steal_properties (XfsmClient *client)
 
   return properties;
 }
+
 
 void
 xfsm_client_merge_properties (XfsmClient *client,
@@ -435,7 +413,7 @@ xfsm_client_merge_properties (XfsmClient *client,
 
       if (strcmp (prop->name, SmCloneCommand) == 0)
         {
-          strv = property_to_strv (prop);
+          strv = xfsm_strv_from_smprop (prop);
           
           if (strv != NULL)
             {
@@ -462,7 +440,7 @@ xfsm_client_merge_properties (XfsmClient *client,
         }
       else if (strcmp (prop->name, SmDiscardCommand) == 0)
         {
-          strv = property_to_strv (prop);
+          strv = xfsm_strv_from_smprop (prop);
           
           if (strv != NULL)
             {
@@ -480,7 +458,7 @@ xfsm_client_merge_properties (XfsmClient *client,
         }
       else if (strcmp (prop->name, SmEnvironment) == 0)
         {
-          strv = property_to_strv (prop);
+          strv = xfsm_strv_from_smprop (prop);
 
           if (strv != NULL)
             {
@@ -545,7 +523,7 @@ xfsm_client_merge_properties (XfsmClient *client,
         }
       else if (strcmp (prop->name, SmRestartCommand) == 0)
         {
-          strv = property_to_strv (prop);
+          strv = xfsm_strv_from_smprop (prop);
           
           if (strv != NULL)
             {
@@ -778,83 +756,6 @@ xfsm_client_dbus_get_state (XfsmClient *client,
 {
   *OUT_state = client->state;
   return TRUE;
-}
-
-
-static GValue *
-xfsm_g_value_from_property (XfsmProperties *properties,
-                            const gchar *name)
-{
-  GValue *val = NULL;
-
-  if (strcmp (name, SmCloneCommand) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->clone_command));
-    }
-  else if (strcmp (name, SmCurrentDirectory) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRING);
-      g_value_take_string (val, g_strdup (properties->current_directory));
-    }
-  else if (strcmp (name, SmDiscardCommand) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->discard_command));
-    }
-  else if (strcmp (name, SmEnvironment) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->environment));
-    }
-#if 0
-  else if (strcmp(name, SmProcessID) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRING);
-      g_value_take_string (val, g_strdup (properties->process_id));
-    }
-#endif
-  else if (strcmp (name, SmProgram) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRING);
-      g_value_take_string (val, g_strdup (properties->program));
-    }
-  else if (strcmp (name, SmRestartCommand) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->restart_command));
-    }
-#if 0
-  else if (strcmp (name, SmResignCommand) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->resign_command));
-    }
-#endif
-  else if (strcmp (name, SmRestartStyleHint) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_UCHAR);
-      g_value_set_uchar (val, properties->restart_style_hint);
-    }
-#if 0
-  else if (strcmp (name, SmShutdownCommand) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRV);
-      g_value_take_boxed (val, g_strdupv (properties->shutdown_command));
-    }
-#endif
-  else if (strcmp (name, SmUserID) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_STRING);
-      g_value_take_string (val, g_strdup (properties->user_id));
-    }
-  else if (strcmp (name, GsmPriority) == 0)
-    {
-      val = xfsm_g_value_new (G_TYPE_UCHAR);
-      g_value_set_uchar (val, properties->priority);
-    }
-
-  return val;
 }
 
 
