@@ -1,5 +1,11 @@
 2008-10-06	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/{xfsm-client.c,xfsm-properties.*}: Move some
+	  properties manipulation functions from xfsm-client.c to
+	  xfsm-properties.c
+
+2008-10-06	Brian Tarricone <bjt23@cornell.edu>
+
 	* configure.in.in: Make D-Bus a hard dependency.
 	* xfce4-session/Makefile.am: Add xfsm-error.* and D-Bus stuff to the
 	  build.
